--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
         <title>Colour Game</title>
     </head>
 
@@ -131,7 +131,7 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"
         ></script>
-        <script src="/js/logic.js"></script>
+        <script src="js/logic.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
         <script>
             const darkmode = new Darkmode(dmOptions);
