--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                     href="#"
                     role="button"
                     id="reColor"
-                    >Refresh Colours</a
                 >
+                    Refresh Colours
+                </a>
             </div>
             <div class="row">
                 <div class="col-md-3"></div>
